--- a/DotNetExam/appsettings.json
+++ b/DotNetExam/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Monsters": "Data Source=.\\SQLEXPRESS;Initial Catalog=Monsters;MultipleActiveResultSets=True;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
